--- a/templates/projects.html
+++ b/templates/projects.html
@@ -18,10 +18,10 @@
                 </div>
                 <div class="container-fluid">
                     <ul class="nav navbar-nav pull-right">
-                        <li role="presentation"><a href="main"> Home </a></li>
-                        <li role="presentation" class="active"><a href="#"> Projects </a></li>
-                        <li role="presentation"><a href="#"> Publications </a></li>
-                        <li role="presentation"><a href="#"> About </a></li>
+                        <li role="presentation"><a href="/"> Home </a></li>
+                        <li role="presentation" class="active"><a href="/projects"> Projects </a></li>
+                        <li role="presentation"><a href="/publications"> Publications </a></li>
+                        <li role="presentation"><a href="/about"> About </a></li>
                     </ul>
                 </div>
             </nav>
