Add projects to XML

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -32,6 +32,10 @@
             <img src="{{ url_for('static', filename='images/profile.jpg') }}" class="img-circle" style="width:100px;height:100px;">
         </div>
 
+        <div>
+
+        </div>
+
         <div class="footer">
             <nav class="navbar navbar-inverse">
             </nav>
