--- a/templates/projects.html
+++ b/templates/projects.html
@@ -28,20 +28,39 @@
         </div>
 
         <div class="jumbotron">
-            <div><h1>Roshan Alwis</h1></div>
-            <img src="{{ url_for('static', filename='images/profile.jpg') }}" class="img-circle" style="width:100px;height:100px;">
+            <div class="row">
+                <div class="col col-sm-3">
+                    <img src="{{ url_for('static', filename='images/profile.jpg') }}" class="img-circle" style="width:200px;height:200px;">
+                </div>
+                <div class="col col-sm-9">
+                    <h3><b> Project Book </b></h3>
+                    <p>
+                        <i>
+                            "Here is my Github repository which contains all the project works that I have done so far.
+                            This repository contains projects related to academic, freelancing and some cool works which
+                            I used to do in my leisure time"
+                        </i>
+                    </p>
+                    <p class="pull-right"> by <b> Roshan </b></p>
+                </div>
+            </div>
         </div>
 
-        <div class="form-group">
-            {% for project in projectList %}
-                <div class="row">
-                    <div class="text-center"><h4 class="light"><b> {{ project.title }} </b></h4></div>
-                    <img src="{{ url_for('static', filename=project.image) }}" class="img-circle center-block" class="img-circle" style="width:100px;height:100px;"/>
-                    <p class="text-center"> {{ project.description }}</p>
-                    <a href="{{ project.link }}" class="btn btn-info center-block"> More </a>
-                </div>
-            {% endfor %}
-        </div>
+        <table>
+            <tr>
+                {% for project in projectList %}
+                    <div class="well span6 row">
+                        <!-- <img src="{{ url_for('static', filename=project.image) }}" class="img-circle center-block" class="img-circle" style="width:100px;height:100px;"/> -->
+                        <div class="text-left"><h4 class="light"><b> {{ project.title }} </b></h4></div>
+                        {% for tag in project.tags %}
+                            <p class="btn btn-success">{{ tag }}</p>
+                        {% endfor %}
+                        <p class="text-justify"> {{ project.description }} </p>
+                        <a href="{{ project.link }}" class="btn btn-info"> More </a>
+                    </div>
+                {% endfor %}
+            </tr>
+        </table>
 
         <div class="footer">
             <nav class="navbar navbar-inverse">
